RESOLVED FIXED225532
[iOS] fix inconsistency around the meaning of `rate` and `defaultPlaybackRate` between WebKit and AVKit
https://bugs.webkit.org/show_bug.cgi?id=225532
Summary [iOS] fix inconsistency around the meaning of `rate` and `defaultPlaybackRate...
Devin Rousso
Reported 2021-05-07 11:52:58 PDT
In AVKit, the `defaultPlaybackRate` is used when playback starts, such as resuming after pausing. In WebKit, however, `defaultPlaybackRate` is only used when first loading and after ending scanning, instead using the `playbackRate` is used in all other cases, including when resuming after pausing.
Attachments
Patch (3.37 KB, patch)
2021-05-07 11:54 PDT, Devin Rousso
no flags
Patch (3.35 KB, patch)
2021-05-07 12:45 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2021-05-07 11:53:14 PDT
Devin Rousso
Comment 2 2021-05-07 11:54:55 PDT
Peng Liu
Comment 3 2021-05-07 12:23:28 PDT
Comment on attachment 428016 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=428016&action=review > Source/WebCore/platform/ios/PlaybackSessionInterfaceAVKit.mm:130 > + [m_playerController setRate:isPlaying ? playbackRate : 0.]; Is this change intended? > Source/WebCore/platform/ios/WebAVPlayerController.mm:201 > + // ending scanning, instead using the `playbackRate` is used in all other cases, including when Nit. s/instead using/instead/
Devin Rousso
Comment 4 2021-05-07 12:37:08 PDT
Comment on attachment 428016 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=428016&action=review >> Source/WebCore/platform/ios/PlaybackSessionInterfaceAVKit.mm:130 >> + [m_playerController setRate:isPlaying ? playbackRate : 0.]; > > Is this change intended? Yes. This is because ultimately we want the `rate` to be the source of truth, so we want to set it last. >> Source/WebCore/platform/ios/WebAVPlayerController.mm:201 >> + // ending scanning, instead using the `playbackRate` is used in all other cases, including when > > Nit. > s/instead using/instead/ Oops, will change :)
Devin Rousso
Comment 5 2021-05-07 12:45:36 PDT
EWS
Comment 6 2021-05-07 15:01:07 PDT
Committed r277203 (237475@main): <https://commits.webkit.org/237475@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428025 [details].
Note You need to log in before you can comment on or make changes to this bug.